fix: QDatetimeRange vertical alignment if one field is empty and one is not (#536)

--- a/src/components/datetime/datetime.ios.styl
+++ b/src/components/datetime/datetime.ios.styl
@@ -119,9 +119,11 @@ body.desktop .q-datetime-col-wrapper
       padding 0 6px
       text-align center
 
-.q-datetime-range.full-width
+.q-datetime-range
     display flex
     > div
-      flex 1 1 auto
+      flex 0 1 auto
+    &.full-width > div
+      flex-grow 1
     > div + div
       margin-left $datetime-range-space
